kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexusplanner
  labels:
    name: nexusplanner
    environment: production
